--- a/index.html
+++ b/index.html
@@ -456,15 +456,16 @@
         <div class="about">
           <h3 class="sub-heading">about us</h3>
           <h1 class="heading">teaching video</h1>
-          <video width="100%" height="100%" type="video/mp4" controls autoplay>
+          <video controls loop width="30%" height="40%" type="video/mp4" controls autoplay>
             <source src="images/-1.mp4">
             </video>
+            <video controls loop width="30%" height="40%" type="video/mp4" controls autoplay>
+                <source src="images/2.mp4">
+                </video>
+                <video controls loop width="30%" height="40%"  type="video/mp4" controls autoplay>
+                    <source src="images/3.mp4.crdownload">
+                    </video>
       </div>
-
-    <video width="100%" height="100%" type="video/mp4" controls autoplay>
-        <source src="images/2.mp4">
-        </video>
-
 
 
     
