--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 <source src="images/2.mp4">
                 </video>
                 <video controls loop width="30%" height="40%"  type="video/mp4" controls autoplay>
-                    <source src="images/3.mp4.crdownload">
+                    <source src="images/3.mp4">
                     </video>
       </div>
 
